Studia_magisterskie/Semestr_1/TPJP/etUbuntu/parser.output
   0  $accept : %entry% $end

   1  decl : raw_decl SEMICOLON

   2  raw_decl : KW_VAL LOWER_ID EQ term
   3           | KW_LET LOWER_ID EQ term
   4           | KW_DATATYPE UPPER_ID tyvars EQ ctors
   5           | KW_CODATATYPE UPPER_ID tyvars EQ dtors
   6           | KW_EXIT
   7           | KW_SHOW
   8           | KW_SHOW any_id
   9           | KW_USE STRING
  10           | KW_SET any_id
  11           | KW_SET STRING
  12           | term
  13           | term EQ term

  14  any_id : UPPER_ID
  15         | LOWER_ID

  16  tyvars :
  17         | TYVAR tyvars

  18  maybe_bar :
  19            | BAR

  20  maybe_and :
  21            | AND

  22  ctors :
  23        | maybe_bar ctor ctor_list

  24  ctor_list :
  25            | BAR ctor ctor_list

  26  ctor : UPPER_ID
  27       | UPPER_ID KW_FROM ty_list

  28  ty_list : ty
  29          | ty ty_list

  30  dtors :
  31        | maybe_and dtor dtor_list

  32  dtor_list :
  33            | AND dtor dtor_list

  34  dtor : UPPER_ID
  35       | UPPER_ID KW_TO ty_list

  36  aty : TYVAR
  37      | LPAREN ty RPAREN
  38      | UPPER_ID

  39  ty_app : ty_app aty
  40         | UPPER_ID

  41  ty : ty_app
  42     | TYVAR
  43     | LBRACE RBRACE
  44     | LPAREN ty RPAREN
  45     | ty STAR ty
  46     | ty PLUS ty
  47     | ty ARROW ty

  48  aterm : raw_aterm

  49  term : raw_term

  50  raw_aterm : any_id
  51            | LPAREN raw_term RPAREN
  52            | LPAREN RPAREN
  53            | KW_LET value_binding_list KW_IN term KW_END
  54            | KW_FN fn_vars
  55            | LAMBDA lambda_vars
  56            | KW_IF term KW_THEN term KW_ELSE term

  57  raw_term : raw_aterm
  58           | term aterm
  59           | term COMMA term

  60  value_binding_list : value_binding
  61                     | value_binding value_binding_list

  62  value_binding : KW_VAL LOWER_ID EQ term SEMICOLON
  63                | KW_LET LOWER_ID EQ term SEMICOLON

  64  fn_vars : LOWER_ID DARROW term
  65          | LOWER_ID fn_vars

  66  lambda_vars : LOWER_ID DOT term
  67              | LOWER_ID lambda_vars

  68  %entry% : '\001' decl

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . decl  (68)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_VAL  shift 6
	KW_LET  shift 7
	KW_DATATYPE  shift 8
	KW_CODATATYPE  shift 9
	KW_USE  shift 10
	KW_EXIT  shift 11
	KW_SHOW  shift 12
	KW_IF  shift 13
	KW_SET  shift 14
	LPAREN  shift 15
	LAMBDA  shift 16
	.  error

	decl  goto 17
	raw_decl  goto 18
	term  goto 19
	any_id  goto 20
	raw_aterm  goto 21
	raw_term  goto 22


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	any_id : LOWER_ID .  (15)

	.  reduce 15


state 4
	any_id : UPPER_ID .  (14)

	.  reduce 14


state 5
	raw_aterm : KW_FN . fn_vars  (54)

	LOWER_ID  shift 23
	.  error

	fn_vars  goto 24


state 6
	raw_decl : KW_VAL . LOWER_ID EQ term  (2)

	LOWER_ID  shift 25
	.  error


state 7
	raw_decl : KW_LET . LOWER_ID EQ term  (3)
	raw_aterm : KW_LET . value_binding_list KW_IN term KW_END  (53)

	LOWER_ID  shift 26
	KW_VAL  shift 27
	KW_LET  shift 28
	.  error

	value_binding_list  goto 29
	value_binding  goto 30


state 8
	raw_decl : KW_DATATYPE . UPPER_ID tyvars EQ ctors  (4)

	UPPER_ID  shift 31
	.  error


state 9
	raw_decl : KW_CODATATYPE . UPPER_ID tyvars EQ dtors  (5)

	UPPER_ID  shift 32
	.  error


state 10
	raw_decl : KW_USE . STRING  (9)

	STRING  shift 33
	.  error


state 11
	raw_decl : KW_EXIT .  (6)

	.  reduce 6


state 12
	raw_decl : KW_SHOW .  (7)
	raw_decl : KW_SHOW . any_id  (8)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	SEMICOLON  reduce 7

	any_id  goto 34


state 13
	raw_aterm : KW_IF . term KW_THEN term KW_ELSE term  (56)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	LAMBDA  shift 16
	.  error

	term  goto 36
	any_id  goto 20
	raw_aterm  goto 21
	raw_term  goto 22


state 14
	raw_decl : KW_SET . any_id  (10)
	raw_decl : KW_SET . STRING  (11)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	STRING  shift 37
	.  error

	any_id  goto 38


state 15
	raw_aterm : LPAREN . raw_term RPAREN  (51)
	raw_aterm : LPAREN . RPAREN  (52)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	RPAREN  shift 39
	LAMBDA  shift 16
	.  error

	term  goto 40
	any_id  goto 20
	raw_aterm  goto 21
	raw_term  goto 41


state 16
	raw_aterm : LAMBDA . lambda_vars  (55)

	LOWER_ID  shift 42
	.  error

	lambda_vars  goto 43


state 17
	%entry% : '\001' decl .  (68)

	.  reduce 68


state 18
	decl : raw_decl . SEMICOLON  (1)

	SEMICOLON  shift 44
	.  error


state 19
	raw_decl : term .  (12)
	raw_decl : term . EQ term  (13)
	raw_term : term . aterm  (58)
	raw_term : term . COMMA term  (59)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	COMMA  shift 45
	EQ  shift 46
	LAMBDA  shift 16
	SEMICOLON  reduce 12

	any_id  goto 20
	aterm  goto 47
	raw_aterm  goto 48


state 20
	raw_aterm : any_id .  (50)

	.  reduce 50


state 21
	raw_term : raw_aterm .  (57)

	.  reduce 57


state 22
	term : raw_term .  (49)

	.  reduce 49


state 23
	fn_vars : LOWER_ID . DARROW term  (64)
	fn_vars : LOWER_ID . fn_vars  (65)

	LOWER_ID  shift 23
	DARROW  shift 49
	.  error

	fn_vars  goto 50


state 24
	raw_aterm : KW_FN fn_vars .  (54)

	.  reduce 54


state 25
	raw_decl : KW_VAL LOWER_ID . EQ term  (2)

	EQ  shift 51
	.  error


state 26
	raw_decl : KW_LET LOWER_ID . EQ term  (3)

	EQ  shift 52
	.  error


state 27
	value_binding : KW_VAL . LOWER_ID EQ term SEMICOLON  (62)

	LOWER_ID  shift 53
	.  error


state 28
	value_binding : KW_LET . LOWER_ID EQ term SEMICOLON  (63)

	LOWER_ID  shift 54
	.  error


state 29
	raw_aterm : KW_LET value_binding_list . KW_IN term KW_END  (53)

	KW_IN  shift 55
	.  error


state 30
	value_binding_list : value_binding .  (60)
	value_binding_list : value_binding . value_binding_list  (61)

	KW_VAL  shift 27
	KW_LET  shift 28
	KW_IN  reduce 60

	value_binding_list  goto 56
	value_binding  goto 30


state 31
	raw_decl : KW_DATATYPE UPPER_ID . tyvars EQ ctors  (4)
	tyvars : .  (16)

	TYVAR  shift 57
	EQ  reduce 16

	tyvars  goto 58


state 32
	raw_decl : KW_CODATATYPE UPPER_ID . tyvars EQ dtors  (5)
	tyvars : .  (16)

	TYVAR  shift 57
	EQ  reduce 16

	tyvars  goto 59


state 33
	raw_decl : KW_USE STRING .  (9)

	.  reduce 9


state 34
	raw_decl : KW_SHOW any_id .  (8)

	.  reduce 8


state 35
	raw_aterm : KW_LET . value_binding_list KW_IN term KW_END  (53)

	KW_VAL  shift 27
	KW_LET  shift 28
	.  error

	value_binding_list  goto 29
	value_binding  goto 30


state 36
	raw_aterm : KW_IF term . KW_THEN term KW_ELSE term  (56)
	raw_term : term . aterm  (58)
	raw_term : term . COMMA term  (59)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	KW_THEN  shift 60
	LPAREN  shift 15
	COMMA  shift 45
	LAMBDA  shift 16
	.  error

	any_id  goto 20
	aterm  goto 47
	raw_aterm  goto 48


state 37
	raw_decl : KW_SET STRING .  (11)

	.  reduce 11


state 38
	raw_decl : KW_SET any_id .  (10)

	.  reduce 10


state 39
	raw_aterm : LPAREN RPAREN .  (52)

	.  reduce 52


state 40
	raw_term : term . aterm  (58)
	raw_term : term . COMMA term  (59)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	COMMA  shift 45
	LAMBDA  shift 16
	.  error

	any_id  goto 20
	aterm  goto 47
	raw_aterm  goto 48


state 41
	term : raw_term .  (49)
	raw_aterm : LPAREN raw_term . RPAREN  (51)

	RPAREN  shift 61
	LOWER_ID  reduce 49
	UPPER_ID  reduce 49
	KW_FN  reduce 49
	KW_LET  reduce 49
	KW_IF  reduce 49
	LPAREN  reduce 49
	COMMA  reduce 49
	LAMBDA  reduce 49


state 42
	lambda_vars : LOWER_ID . DOT term  (66)
	lambda_vars : LOWER_ID . lambda_vars  (67)

	LOWER_ID  shift 42
	DOT  shift 62
	.  error

	lambda_vars  goto 63


state 43
	raw_aterm : LAMBDA lambda_vars .  (55)

	.  reduce 55


state 44
	decl : raw_decl SEMICOLON .  (1)

	.  reduce 1


state 45
	raw_term : term COMMA . term  (59)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	LAMBDA  shift 16
	.  error

	term  goto 64
	any_id  goto 20
	raw_aterm  goto 21
	raw_term  goto 22


state 46
	raw_decl : term EQ . term  (13)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	LAMBDA  shift 16
	.  error

	term  goto 65
	any_id  goto 20
	raw_aterm  goto 21
	raw_term  goto 22


state 47
	raw_term : term aterm .  (58)

	.  reduce 58


state 48
	aterm : raw_aterm .  (48)

	.  reduce 48


state 49
	fn_vars : LOWER_ID DARROW . term  (64)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	LAMBDA  shift 16
	.  error

	term  goto 66
	any_id  goto 20
	raw_aterm  goto 21
	raw_term  goto 22


state 50
	fn_vars : LOWER_ID fn_vars .  (65)

	.  reduce 65


state 51
	raw_decl : KW_VAL LOWER_ID EQ . term  (2)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	LAMBDA  shift 16
	.  error

	term  goto 67
	any_id  goto 20
	raw_aterm  goto 21
	raw_term  goto 22


state 52
	raw_decl : KW_LET LOWER_ID EQ . term  (3)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	LAMBDA  shift 16
	.  error

	term  goto 68
	any_id  goto 20
	raw_aterm  goto 21
	raw_term  goto 22


state 53
	value_binding : KW_VAL LOWER_ID . EQ term SEMICOLON  (62)

	EQ  shift 69
	.  error


state 54
	value_binding : KW_LET LOWER_ID . EQ term SEMICOLON  (63)

	EQ  shift 70
	.  error


state 55
	raw_aterm : KW_LET value_binding_list KW_IN . term KW_END  (53)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	LAMBDA  shift 16
	.  error

	term  goto 71
	any_id  goto 20
	raw_aterm  goto 21
	raw_term  goto 22


state 56
	value_binding_list : value_binding value_binding_list .  (61)

	.  reduce 61


state 57
	tyvars : TYVAR . tyvars  (17)
	tyvars : .  (16)

	TYVAR  shift 57
	EQ  reduce 16

	tyvars  goto 72


state 58
	raw_decl : KW_DATATYPE UPPER_ID tyvars . EQ ctors  (4)

	EQ  shift 73
	.  error


state 59
	raw_decl : KW_CODATATYPE UPPER_ID tyvars . EQ dtors  (5)

	EQ  shift 74
	.  error


state 60
	raw_aterm : KW_IF term KW_THEN . term KW_ELSE term  (56)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	LAMBDA  shift 16
	.  error

	term  goto 75
	any_id  goto 20
	raw_aterm  goto 21
	raw_term  goto 22


state 61
	raw_aterm : LPAREN raw_term RPAREN .  (51)

	.  reduce 51


state 62
	lambda_vars : LOWER_ID DOT . term  (66)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	LAMBDA  shift 16
	.  error

	term  goto 76
	any_id  goto 20
	raw_aterm  goto 21
	raw_term  goto 22


state 63
	lambda_vars : LOWER_ID lambda_vars .  (67)

	.  reduce 67


64: shift/reduce conflict (shift 15, reduce 59) on LPAREN
state 64
	raw_term : term . aterm  (58)
	raw_term : term . COMMA term  (59)
	raw_term : term COMMA term .  (59)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	LAMBDA  shift 16
	KW_END  reduce 59
	KW_THEN  reduce 59
	KW_ELSE  reduce 59
	RPAREN  reduce 59
	COMMA  reduce 59
	EQ  reduce 59
	SEMICOLON  reduce 59

	any_id  goto 20
	aterm  goto 47
	raw_aterm  goto 48


state 65
	raw_decl : term EQ term .  (13)
	raw_term : term . aterm  (58)
	raw_term : term . COMMA term  (59)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	COMMA  shift 45
	LAMBDA  shift 16
	SEMICOLON  reduce 13

	any_id  goto 20
	aterm  goto 47
	raw_aterm  goto 48


66: shift/reduce conflict (shift 15, reduce 64) on LPAREN
state 66
	raw_term : term . aterm  (58)
	raw_term : term . COMMA term  (59)
	fn_vars : LOWER_ID DARROW term .  (64)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	COMMA  shift 45
	LAMBDA  shift 16
	KW_END  reduce 64
	KW_THEN  reduce 64
	KW_ELSE  reduce 64
	RPAREN  reduce 64
	EQ  reduce 64
	SEMICOLON  reduce 64

	any_id  goto 20
	aterm  goto 47
	raw_aterm  goto 48


state 67
	raw_decl : KW_VAL LOWER_ID EQ term .  (2)
	raw_term : term . aterm  (58)
	raw_term : term . COMMA term  (59)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	COMMA  shift 45
	LAMBDA  shift 16
	SEMICOLON  reduce 2

	any_id  goto 20
	aterm  goto 47
	raw_aterm  goto 48


state 68
	raw_decl : KW_LET LOWER_ID EQ term .  (3)
	raw_term : term . aterm  (58)
	raw_term : term . COMMA term  (59)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	COMMA  shift 45
	LAMBDA  shift 16
	SEMICOLON  reduce 3

	any_id  goto 20
	aterm  goto 47
	raw_aterm  goto 48


state 69
	value_binding : KW_VAL LOWER_ID EQ . term SEMICOLON  (62)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	LAMBDA  shift 16
	.  error

	term  goto 77
	any_id  goto 20
	raw_aterm  goto 21
	raw_term  goto 22


state 70
	value_binding : KW_LET LOWER_ID EQ . term SEMICOLON  (63)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	LAMBDA  shift 16
	.  error

	term  goto 78
	any_id  goto 20
	raw_aterm  goto 21
	raw_term  goto 22


state 71
	raw_aterm : KW_LET value_binding_list KW_IN term . KW_END  (53)
	raw_term : term . aterm  (58)
	raw_term : term . COMMA term  (59)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_END  shift 79
	KW_IF  shift 13
	LPAREN  shift 15
	COMMA  shift 45
	LAMBDA  shift 16
	.  error

	any_id  goto 20
	aterm  goto 47
	raw_aterm  goto 48


state 72
	tyvars : TYVAR tyvars .  (17)

	.  reduce 17


state 73
	raw_decl : KW_DATATYPE UPPER_ID tyvars EQ . ctors  (4)
	maybe_bar : .  (18)
	ctors : .  (22)

	BAR  shift 80
	UPPER_ID  reduce 18
	SEMICOLON  reduce 22

	ctors  goto 81
	maybe_bar  goto 82


state 74
	raw_decl : KW_CODATATYPE UPPER_ID tyvars EQ . dtors  (5)
	maybe_and : .  (20)
	dtors : .  (30)

	AND  shift 83
	UPPER_ID  reduce 20
	SEMICOLON  reduce 30

	dtors  goto 84
	maybe_and  goto 85


state 75
	raw_aterm : KW_IF term KW_THEN term . KW_ELSE term  (56)
	raw_term : term . aterm  (58)
	raw_term : term . COMMA term  (59)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	KW_ELSE  shift 86
	LPAREN  shift 15
	COMMA  shift 45
	LAMBDA  shift 16
	.  error

	any_id  goto 20
	aterm  goto 47
	raw_aterm  goto 48


76: shift/reduce conflict (shift 15, reduce 66) on LPAREN
state 76
	raw_term : term . aterm  (58)
	raw_term : term . COMMA term  (59)
	lambda_vars : LOWER_ID DOT term .  (66)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	COMMA  shift 45
	LAMBDA  shift 16
	KW_END  reduce 66
	KW_THEN  reduce 66
	KW_ELSE  reduce 66
	RPAREN  reduce 66
	EQ  reduce 66
	SEMICOLON  reduce 66

	any_id  goto 20
	aterm  goto 47
	raw_aterm  goto 48


state 77
	raw_term : term . aterm  (58)
	raw_term : term . COMMA term  (59)
	value_binding : KW_VAL LOWER_ID EQ term . SEMICOLON  (62)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	COMMA  shift 45
	SEMICOLON  shift 87
	LAMBDA  shift 16
	.  error

	any_id  goto 20
	aterm  goto 47
	raw_aterm  goto 48


state 78
	raw_term : term . aterm  (58)
	raw_term : term . COMMA term  (59)
	value_binding : KW_LET LOWER_ID EQ term . SEMICOLON  (63)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	COMMA  shift 45
	SEMICOLON  shift 88
	LAMBDA  shift 16
	.  error

	any_id  goto 20
	aterm  goto 47
	raw_aterm  goto 48


state 79
	raw_aterm : KW_LET value_binding_list KW_IN term KW_END .  (53)

	.  reduce 53


state 80
	maybe_bar : BAR .  (19)

	.  reduce 19


state 81
	raw_decl : KW_DATATYPE UPPER_ID tyvars EQ ctors .  (4)

	.  reduce 4


state 82
	ctors : maybe_bar . ctor ctor_list  (23)

	UPPER_ID  shift 89
	.  error

	ctor  goto 90


state 83
	maybe_and : AND .  (21)

	.  reduce 21


state 84
	raw_decl : KW_CODATATYPE UPPER_ID tyvars EQ dtors .  (5)

	.  reduce 5


state 85
	dtors : maybe_and . dtor dtor_list  (31)

	UPPER_ID  shift 91
	.  error

	dtor  goto 92


state 86
	raw_aterm : KW_IF term KW_THEN term KW_ELSE . term  (56)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	KW_IF  shift 13
	LPAREN  shift 15
	LAMBDA  shift 16
	.  error

	term  goto 93
	any_id  goto 20
	raw_aterm  goto 21
	raw_term  goto 22


state 87
	value_binding : KW_VAL LOWER_ID EQ term SEMICOLON .  (62)

	.  reduce 62


state 88
	value_binding : KW_LET LOWER_ID EQ term SEMICOLON .  (63)

	.  reduce 63


state 89
	ctor : UPPER_ID .  (26)
	ctor : UPPER_ID . KW_FROM ty_list  (27)

	KW_FROM  shift 94
	SEMICOLON  reduce 26
	BAR  reduce 26


state 90
	ctors : maybe_bar ctor . ctor_list  (23)
	ctor_list : .  (24)

	BAR  shift 95
	SEMICOLON  reduce 24

	ctor_list  goto 96


state 91
	dtor : UPPER_ID .  (34)
	dtor : UPPER_ID . KW_TO ty_list  (35)

	KW_TO  shift 97
	SEMICOLON  reduce 34
	AND  reduce 34


state 92
	dtors : maybe_and dtor . dtor_list  (31)
	dtor_list : .  (32)

	AND  shift 98
	SEMICOLON  reduce 32

	dtor_list  goto 99


93: shift/reduce conflict (shift 15, reduce 56) on LPAREN
state 93
	raw_aterm : KW_IF term KW_THEN term KW_ELSE term .  (56)
	raw_term : term . aterm  (58)
	raw_term : term . COMMA term  (59)

	LOWER_ID  shift 3
	UPPER_ID  shift 4
	KW_FN  shift 5
	KW_LET  shift 35
	LPAREN  shift 15
	LAMBDA  shift 16
	KW_END  reduce 56
	KW_THEN  reduce 56
	KW_ELSE  reduce 56
	RPAREN  reduce 56
	COMMA  reduce 56
	EQ  reduce 56
	SEMICOLON  reduce 56

	any_id  goto 20
	aterm  goto 47
	raw_aterm  goto 48


state 94
	ctor : UPPER_ID KW_FROM . ty_list  (27)

	UPPER_ID  shift 100
	TYVAR  shift 101
	LPAREN  shift 102
	LBRACE  shift 103
	.  error

	ty_list  goto 104
	ty  goto 105
	ty_app  goto 106


state 95
	ctor_list : BAR . ctor ctor_list  (25)

	UPPER_ID  shift 89
	.  error

	ctor  goto 107


state 96
	ctors : maybe_bar ctor ctor_list .  (23)

	.  reduce 23


state 97
	dtor : UPPER_ID KW_TO . ty_list  (35)

	UPPER_ID  shift 100
	TYVAR  shift 101
	LPAREN  shift 102
	LBRACE  shift 103
	.  error

	ty_list  goto 108
	ty  goto 105
	ty_app  goto 106


state 98
	dtor_list : AND . dtor dtor_list  (33)

	UPPER_ID  shift 91
	.  error

	dtor  goto 109


state 99
	dtors : maybe_and dtor dtor_list .  (31)

	.  reduce 31


state 100
	ty_app : UPPER_ID .  (40)

	.  reduce 40


state 101
	ty : TYVAR .  (42)

	.  reduce 42


state 102
	ty : LPAREN . ty RPAREN  (44)

	UPPER_ID  shift 100
	TYVAR  shift 101
	LPAREN  shift 102
	LBRACE  shift 103
	.  error

	ty  goto 110
	ty_app  goto 106


state 103
	ty : LBRACE . RBRACE  (43)

	RBRACE  shift 111
	.  error


state 104
	ctor : UPPER_ID KW_FROM ty_list .  (27)

	.  reduce 27


state 105
	ty_list : ty .  (28)
	ty_list : ty . ty_list  (29)
	ty : ty . STAR ty  (45)
	ty : ty . PLUS ty  (46)
	ty : ty . ARROW ty  (47)

	UPPER_ID  shift 100
	TYVAR  shift 101
	LPAREN  shift 102
	ARROW  shift 112
	STAR  shift 113
	PLUS  shift 114
	LBRACE  shift 103
	SEMICOLON  reduce 28
	BAR  reduce 28
	AND  reduce 28

	ty_list  goto 115
	ty  goto 105
	ty_app  goto 106


106: shift/reduce conflict (shift 116, reduce 41) on UPPER_ID
106: shift/reduce conflict (shift 117, reduce 41) on TYVAR
106: shift/reduce conflict (shift 118, reduce 41) on LPAREN
state 106
	ty_app : ty_app . aty  (39)
	ty : ty_app .  (41)

	UPPER_ID  shift 116
	TYVAR  shift 117
	LPAREN  shift 118
	RPAREN  reduce 41
	ARROW  reduce 41
	SEMICOLON  reduce 41
	STAR  reduce 41
	PLUS  reduce 41
	BAR  reduce 41
	AND  reduce 41
	LBRACE  reduce 41

	aty  goto 119


state 107
	ctor_list : BAR ctor . ctor_list  (25)
	ctor_list : .  (24)

	BAR  shift 95
	SEMICOLON  reduce 24

	ctor_list  goto 120


state 108
	dtor : UPPER_ID KW_TO ty_list .  (35)

	.  reduce 35


state 109
	dtor_list : AND dtor . dtor_list  (33)
	dtor_list : .  (32)

	AND  shift 98
	SEMICOLON  reduce 32

	dtor_list  goto 121


state 110
	ty : LPAREN ty . RPAREN  (44)
	ty : ty . STAR ty  (45)
	ty : ty . PLUS ty  (46)
	ty : ty . ARROW ty  (47)

	RPAREN  shift 122
	ARROW  shift 112
	STAR  shift 113
	PLUS  shift 114
	.  error


state 111
	ty : LBRACE RBRACE .  (43)

	.  reduce 43


state 112
	ty : ty ARROW . ty  (47)

	UPPER_ID  shift 100
	TYVAR  shift 101
	LPAREN  shift 102
	LBRACE  shift 103
	.  error

	ty  goto 123
	ty_app  goto 106


state 113
	ty : ty STAR . ty  (45)

	UPPER_ID  shift 100
	TYVAR  shift 101
	LPAREN  shift 102
	LBRACE  shift 103
	.  error

	ty  goto 124
	ty_app  goto 106


state 114
	ty : ty PLUS . ty  (46)

	UPPER_ID  shift 100
	TYVAR  shift 101
	LPAREN  shift 102
	LBRACE  shift 103
	.  error

	ty  goto 125
	ty_app  goto 106


state 115
	ty_list : ty ty_list .  (29)

	.  reduce 29


state 116
	aty : UPPER_ID .  (38)

	.  reduce 38


state 117
	aty : TYVAR .  (36)

	.  reduce 36


state 118
	aty : LPAREN . ty RPAREN  (37)

	UPPER_ID  shift 100
	TYVAR  shift 101
	LPAREN  shift 102
	LBRACE  shift 103
	.  error

	ty  goto 126
	ty_app  goto 106


state 119
	ty_app : ty_app aty .  (39)

	.  reduce 39


state 120
	ctor_list : BAR ctor ctor_list .  (25)

	.  reduce 25


state 121
	dtor_list : AND dtor dtor_list .  (33)

	.  reduce 33


state 122
	ty : LPAREN ty RPAREN .  (44)

	.  reduce 44


state 123
	ty : ty . STAR ty  (45)
	ty : ty . PLUS ty  (46)
	ty : ty . ARROW ty  (47)
	ty : ty ARROW ty .  (47)

	ARROW  shift 112
	STAR  shift 113
	PLUS  shift 114
	UPPER_ID  reduce 47
	TYVAR  reduce 47
	LPAREN  reduce 47
	RPAREN  reduce 47
	SEMICOLON  reduce 47
	BAR  reduce 47
	AND  reduce 47
	LBRACE  reduce 47


state 124
	ty : ty . STAR ty  (45)
	ty : ty STAR ty .  (45)
	ty : ty . PLUS ty  (46)
	ty : ty . ARROW ty  (47)

	.  reduce 45


state 125
	ty : ty . STAR ty  (45)
	ty : ty . PLUS ty  (46)
	ty : ty PLUS ty .  (46)
	ty : ty . ARROW ty  (47)

	STAR  shift 113
	UPPER_ID  reduce 46
	TYVAR  reduce 46
	LPAREN  reduce 46
	RPAREN  reduce 46
	ARROW  reduce 46
	SEMICOLON  reduce 46
	PLUS  reduce 46
	BAR  reduce 46
	AND  reduce 46
	LBRACE  reduce 46


state 126
	aty : LPAREN ty . RPAREN  (37)
	ty : ty . STAR ty  (45)
	ty : ty . PLUS ty  (46)
	ty : ty . ARROW ty  (47)

	RPAREN  shift 127
	ARROW  shift 112
	STAR  shift 113
	PLUS  shift 114
	.  error


state 127
	aty : LPAREN ty RPAREN .  (37)

	.  reduce 37


State 64 contains 1 shift/reduce conflict.
State 66 contains 1 shift/reduce conflict.
State 76 contains 1 shift/reduce conflict.
State 93 contains 1 shift/reduce conflict.
State 106 contains 3 shift/reduce conflicts.


39 terminals, 26 nonterminals
69 grammar rules, 128 states
